# python-project-49

./: Makefile  README.md  pyproject.toml
brain_games/scripts/: brain_even.py  brain_games.py
