[tool.poetry]
name = "python-project-49"
version = "0.1.0"
description = "Hexlet Project Brain Games"
authors = ["Boris Kochergin <boris.kochergin@gmail.com>"]
license = "GNUv3"
readme = "README.md"
packages = [
	{include = "brain_games" }
	]

[tool.poetry.dependencies]
python = "^3.9"
prompt = "^0.4.1"
flake8 = "^5.0.4"
# pylint = "<=2.8.3"
# mccabe = ">=0.6.0,<0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"

